# cleanup-notifier-mx

./: .gitignore  README.md  cleanup-notifier-mx_23.04.dsc  cleanup-notifier-mx_23.04.tar.xz  cleanup-notifier-mx_23.04_all.deb  cleanup-notifier-mx_23.04_amd64.build  cleanup-notifier-mx_23.04_amd64.buildinfo  cleanup-notifier-mx_23.04_amd64.changes  meson.build
data/: meson.build
data/icons/: meson.build
debian/: changelog  control  rules
debs/: cleanup-notifier-mx_22.05.01mx.dsc  cleanup-notifier-mx_22.05.01mx.tar.xz  cleanup-notifier-mx_22.05.01mx_all.deb  cleanup-notifier-mx_22.05.01mx_amd64.changes  cleanup-notifier-mx_22.05.02mx.dsc  cleanup-notifier-mx_22.05.02mx.tar.xz  cleanup-notifier-mx_22.05.02mx_all.deb  cleanup-notifier-mx_22.05.02mx_amd64.changes  cleanup-notifier-mx_25.11.01.dsc  cleanup-notifier-mx_25.11.01.tar.xz  cleanup-notifier-mx_25.11.01_all.deb  cleanup-notifier-mx_25.11.01_amd64.buildinfo  cleanup-notifier-mx_25.11.01_amd64.changes
src/: cleanup-notifier-mx  cleanup-notifier-mx.py
translations/: make-pot  tx-complete-log  tx-get-po  tx-push-pot
translations/po/: LINGUAS  ca.po  es.po  es_ES.po  fi.po  fr.po  fr_BE.po  he_IL.po  it.po  ja.po  meson.build  nb.po  nb_NO.po  nl.po  nl_BE.po  pl.po  pt.po  pt_BR.po  ru.po  sl.po  sq.po  sv.po  th.po
